added all section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment One</title>
-</head>
-<body>
-    <header>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400&family=Merriweather:wght@400;700;900&family=Open+Sans:ital,wght@0,400;0,800;1,300;1,700&family=Work+Sans:wght@400;700&display=swap"
+        rel="stylesheet">
 
+    <link rel="stylesheet" href="styles/assignment.css">
+</head>
+
+<body class="body-color">
+    <header>
+        <section class="banner">
+            <img class="back-img" src="resources/Banner Image.png" alt="">
+            <div class="img-back">
+                <div class="banner-tittle">
+                    <h3>Happy New Year</h3>
+                    <h2>New Year Party Celebration</h2>
+                </div>
+            </div>
+            <div class="categori">
+                <div class="categori-offer">
+                    <h2 class="offer">65% OFF</h2>
+                    <h2 class="details">OUR HOLIDAY DEALS ARE BETTER</h2>
+                    <h2 class="all">ALL CATEGORIES</h2>
+                </div>
+                <div class="holiday-img"><img src="resources/New Year Photo.png" alt=""></div>
+               
+
+            </div>
+        </section>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
