added container section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body class="body-color">
     <header>
         <section class="banner">
-            <img class="back-img" src="resources/Banner Image.png" alt="">
             <div class="img-back">
                 <div class="banner-tittle">
                     <h3>Happy New Year</h3>
@@ -31,7 +30,65 @@
                     <h2 class="all">ALL CATEGORIES</h2>
                 </div>
                 <div class="holiday-img"><img src="resources/New Year Photo.png" alt=""></div>
-               
+            </div>
+            <div class="banner-img">
+
+            </div>
+        </section>
+        <section class="second-banner-img">
+
+            <div class="second-banner-style">
+                <div class="btn-banner-tittle">
+                    <h2 class="second-banner-tittle">Welcome to midnight party</h2>
+                    <p class="second-banner-description">Dolor sit amet consectetur. Consequat eget consectetur
+                        maecenas
+                        sed
+                        molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+                    </p>
+                    <button class="btn-primary">Join Now</button>
+                </div>
+                <div class="img-add">
+                    <img src="resources/Group 70.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="third-section">
+            <div class="headiong">
+                <h2><span style="color: #F00;"> Place: </span> New Park Hotel</h2>
+                <h2><span style="color: #F00;">Date: </span> 31 December Night 2023</h2>
+                <h2><span style="color: #F00;">Time:</span> Evening 7.30 pm to 12.30 am</h2>
+                <div class="btn">
+                    <button class="third-section-btn">Join Now</button>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="container">
+
+                <div class="container-section">
+                    <div class="container-tittle">
+                        <h2>NEW BEST OFFER</h2>
+                        <h1>Coming Soon</h1>
+                        <p class="container-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas
+                            sed
+                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                    </div>
+
+                    <div class="container-circle">
+                        <div class="circle-img">
+                            <img src="resources/Ellipse 1.png" alt="">
+                        </div>
+                    </div>
+
+                    <div class="second-container">
+                        <h2 class="tittle-year">2024</h2>
+                        <p class="second-container-description">Dolor sit amet consectetur. Consequat eget consectetur
+                            maecenas sed.</p>
+                        <div class="new-img">
+                            <img src="resources/Group 96.png" alt="">
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </section>
