--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
                             molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                     </div>
 
-                    <div class="container-circle">
-                        <div class="circle-img">
-                            <img src="resources/Ellipse 1.png" alt="">
-                        </div>
+                    <div class="container-circle-section">
+                        <div class="container-circle"> </div>
+                            <div>
+                                <img class="circle-img" src="resources/Ellipse 1.png" alt="">
+                            </div>
                     </div>
-
                     <div class="second-container">
-                        <h2 class="tittle-year">2024</h2>
+                        <h2>2024</h2>
                         <p class="second-container-description">Dolor sit amet consectetur. Consequat eget consectetur
                             maecenas sed.</p>
                         <div class="new-img">
