added holiday section

--- a/index.html
+++ b/index.html
@@ -76,20 +76,29 @@
 
                     <div class="container-circle-section">
                         <div class="container-circle"> </div>
-                            <div>
-                                <img class="circle-img" src="resources/Ellipse 1.png" alt="">
-                            </div>
+                        <div>
+                            <img class="circle-img" src="resources/Ellipse 1.png" alt="">
+                        </div>
                     </div>
                     <div class="second-container">
                         <h2>2024</h2>
                         <p class="second-container-description">Dolor sit amet consectetur. Consequat eget consectetur
-                            maecenas sed.</p>
+                            maecenas sed.
+                        </p>
                         <div class="new-img">
                             <img src="resources/Group 96.png" alt="">
                         </div>
                     </div>
                 </div>
+            </div>
 
+            <div class="holiday-sale">
+                <h1>WHAT IS FUNCTIONAL</h1>
+                <h2><span style="color: #F00;">Holidays</span> Sale 50%</h2>
+                <p class="holiday-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+                    molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. Eleifend nunc purus quam id
+                    fermentum amet amet sit consectetur.
+                </p>
             </div>
         </section>
     </header>
