--- a/index.html
+++ b/index.html
@@ -100,6 +100,13 @@
                     fermentum amet amet sit consectetur.
                 </p>
             </div>
+
+            <div class="rectangal">
+               <div class="rectangal-img"><a href=""><img src="resources/Rectangle 2.png" alt=""></a></div>
+               <div class="rectangal-img"><a href=""><img src="" alt=""></a></div>
+               <div class="rectangal-img"><a href=""><img src="" alt=""></a></div>
+               <div class="rectangal-img"><a href=""><img src="" alt=""></a></div>
+            </div>
         </section>
     </header>
     <main>
