added main section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body class="body-color">
-    <header>
+    <header class="header">
         <section class="banner">
             <div class="img-back">
                 <div class="banner-tittle">
@@ -35,6 +35,8 @@
 
             </div>
         </section>
+    </header>
+    <main>
         <section class="second-banner-img">
 
             <div class="second-banner-style">
@@ -71,11 +73,11 @@
                         <h1>Coming Soon</h1>
                         <p class="container-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas
                             sed
-                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
+                            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.
+                        </p>
                     </div>
 
                     <div class="container-circle-section">
-                        <div class="container-circle"> </div>
                         <div>
                             <img class="circle-img" src="resources/Ellipse 1.png" alt="">
                         </div>
@@ -101,16 +103,36 @@
                 </p>
             </div>
 
-            <div class="rectangal">
-               <div class="rectangal-img"><a href=""><img src="resources/Rectangle 2.png" alt=""></a></div>
-               <div class="rectangal-img"><a href=""><img src="" alt=""></a></div>
-               <div class="rectangal-img"><a href=""><img src="" alt=""></a></div>
-               <div class="rectangal-img"><a href=""><img src="" alt=""></a></div>
+            <div class="rectangal-style">
+                <div class="rectangal">
+                    <div class="rectangal-img-75"><a href=""><img src="resources/Group 75.png" alt=""></a></div>
+                    <div class="rectangal-img-1"><a href=""><img src="resources/Rectangle 1.png" alt=""></a></div>
+                    <div class="rectangal-img-44"><a href=""><img src="resources/Group 44.png" alt=""></a></div>
+                </div>
             </div>
-        </section>
-    </header>
-    <main>
 
+            <div class="picture-tittle">
+                <h2>THE BEST GIFTS</h2>
+                <h1>Our Awesome Portfolio</h1>
+                <p class="picture-description">
+                    Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed
+                    sodales risus ut pellentesque vel euismod.
+                </p>
+            </div>
+            <div class="six-image">
+                <div class="three-image">
+                    <div><a href=""><img src="resources/Rectangle 3.png" alt=""></a></div>
+                    <div><a href=""><img src="resources/Rectangle 4.png" alt=""></a></div>
+                    <div><a href=""><img src="resources/Rectangle 5.png" alt=""></a></div>
+                </div>
+                <div class="second-three-image">
+                    <div><a href=""><img src="resources/Rectangle 6.png" alt=""></a></div>
+                    <div><a href=""><img src="resources/Rectangle 7.png" alt=""></a></div>
+                    <div><a href=""><img src="resources/Rectangle 8.png" alt=""></a></div>
+                </div>
+            </div>
+
+        </section>
     </main>
     <footer>
 
