added last section

--- a/index.html
+++ b/index.html
@@ -133,6 +133,19 @@
             </div>
 
         </section>
+        <section class="last-section">
+            <div class="section-design">
+                <div class="img-group-61"><a href=""><img src="resources/Group 61.png" alt=""></a></div>
+                <div><h2 class="img-tittle">Subscribe Newsletter</h2></div>
+                <div><p class="img-description">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p></div>
+                <div class="input-type">
+                    <input type="text" placeholder="user@gmail.com">
+                    <div class="btn-style">
+                        <button class="btn">Subscribe</button>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
 
