added footer section

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles/assignment.css">
+
 </head>
 
 <body class="body-color">
@@ -147,8 +148,38 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <section class="footer-section">
+            <div class="footer-div">
+                <div class="footer-tittle">44, Big Building Roosevelt Street
+                    Beach Gardens Florida 33410
+                </div>
+                <div class="footer-contact-section">
+                    <div class="call"> +00 123 584 124</div>
+                    <div class="web"> www.website.com</div>
+                    <div><a href=""><img src="resources/Call.png" alt=""></a></div>
+                    <div><a href=""><img src="resources/Website.png" alt=""></a></div>
+                </div>
+            </div>
+            <hr>
+            <div class="social">
+                <div class="img-1">
+                    <img src="resources/Facebook.png" alt="">
+                </div>
+                <div class="img-2">
+                    <img src="resources/Instagram.png" alt="">
+                </div>
+                <div class="img-3">
+                    <img src="resources/Twitter.png" alt="">
+                </div>
+                <div class="img-4"><img  src="resources/Linkedin.png" alt=""></div>
+            </div>
+            <hr>
+            <div class="last-tittle">
+                <h2>2017, All Rights Reserved.</h2>
+                <h1>Unsubscribe</h2>
+            </div>
+        </section>
     </footer>
 </body>
 
