added all section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="input-type">
                     <input type="text" placeholder="user@gmail.com">
                     <div class="btn-style">
-                        <button class="btn">Subscribe</button>
+                        <button class="btn-sub">Subscribe</button>
                     </div>
                 </div>
             </div>
